--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .logo {
@@ -40,6 +41,9 @@
   left: 64px;
   bottom: 30px;
   margin: 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
 .header__main-illustration {
