--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+body {
+  margin: 0;
+}
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -46,6 +49,10 @@
   font-weight: normal;
 }
 
+.header__link {
+  color: #2f80ed;
+}
+
 .header__main-illustration {
   width: 765px;
   height: 608px;
@@ -62,6 +69,46 @@
   position: absolute;
   top: 64px;
   right: 0;
+}
+
+.description {
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.two-columns {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  margin: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  margin: 0 0 30px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
