--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,74 @@ body {
   margin-bottom: 0;
 }
 
+.digits {
+  width: 1100px;
+  margin: 0 auto 100px;
+}
+
+.section-title {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  margin: 0 auto 20px;
+  text-align: center;
+}
+
+.section-title_theme_light {
+
+}
+
+.section-subtitle {
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 auto 60px;
+  text-align: center;
+}
+
+.table {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
+
+.table__cell {
+
+}
+
+.table__cell_theme_light {
+  width: 250px;
+  margin-bottom: 60px;
+}
+
+.table__cell_theme_light:nth-of-type(n+5) {
+  margin-bottom: 0;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0 0 20px;
+}
+
+.table__text,
+.table__text_source {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
+.table__text_source {
+  margin: 20px 0 0;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
