--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
 }
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -125,10 +126,6 @@ body {
   text-align: center;
 }
 
-.section-title_theme_light {
-
-}
-
 .section-subtitle {
   width: 60%;
   line-height: 34px;
@@ -145,10 +142,6 @@ body {
   justify-content: space-between;
   margin: 0;
   padding: 0;
-}
-
-.table__cell {
-
 }
 
 .table__cell_theme_light {
@@ -175,8 +168,47 @@ body {
   margin: 0;
 }
 
-.table__text_source {
-  margin: 20px 0 0;
+.table__text_theme_light:first-of-type:not(:only-child) {
+  margin-bottom: 20px;
+}
+
+.feynman {
+  height: 890px;
+  background-color: #f2f2f2;
+  background-image: url(/images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  position: relative;
+}
+
+.feynman__title {
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 100px;
+  margin-bottom: 70px;
+}
+
+.feynman__subtitle {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.feynman__subtitle,
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  color: #2f80ed;
+  position: absolute;
+  top: 50%;
+  right: 48px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
