--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,7 @@ body {
 
 .header__link {
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-illustration {
@@ -131,17 +132,25 @@ body {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 0 auto 60px;
+  margin: 0 auto;
   text-align: center;
 }
 
+.section-subtitle_theme_light {
+  margin-bottom: 60px;
+}
+
 .table {
+  width: 1100px;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   margin: 0;
   padding: 0;
+}
+
+.table_theme_light {
+  justify-content: space-between;
 }
 
 .table__cell_theme_light {
@@ -209,12 +218,40 @@ body {
   position: absolute;
   top: 50%;
   right: 48px;
+  text-decoration: none;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.kaufman {
+  background-color: #1f1f1f;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark {
+  color: white;
+  padding-top: 90px;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.table_theme_dark {
+  padding-bottom: 90px;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 5;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
 }
