--- a/styles/style.css
+++ b/styles/style.css
@@ -21,11 +21,12 @@ body {
 }
 
 .logo {
-  position: absolute;
-  z-index: 5;
+
 }
 
 .logo__place_header {
+  position: absolute;
+  z-index: 5;
   top: 30px;
   left: 64px;
 }
@@ -254,4 +255,69 @@ body {
   position: absolute;
   top: 0;
   right: -210px;
+  width: 877px;
+  height: 877px;
+}
+
+.footer {
+ min-height: 350px;
+ background-color: #1f1f1f;
+ padding: 60px 0 40px;
+}
+
+.footer__columns {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.footer__column_content_copyright {
+  flex-basis: 711px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+.logo_place_footer {
+  width: 183px;
+}
+
+.footer__author {
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color:white
+}
+
+.footer__column-heading {
+  margin:  0 0 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.footer__column-links {
+  list-style: none;
+  margin: 0 0 16px;
+  padding: 0;
+}
+
+.footer__column-link {
+
+}
+
+.footer__column-link_item {
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
+.footer__social-icon {
+  margin-right: 10px;
 }
