--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-}
-
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -20,10 +16,6 @@ body {
   margin-bottom: 100px;
 }
 
-.logo {
-
-}
-
 .logo__place_header {
   position: absolute;
   z-index: 5;
@@ -38,6 +30,7 @@ body {
   font-size: 102px;
   font-weight: bold;
   margin: 0;
+  z-index: 2;
 }
 
 .header__subtitle {
@@ -49,6 +42,7 @@ body {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  z-index: 2;
 }
 
 .header__link {
@@ -62,7 +56,7 @@ body {
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 3;
+  z-index: 1;
 }
 
 .header__square-pic {
@@ -110,6 +104,7 @@ body {
 .two-columns__span-accent {
   font-weight: bold;
 }
+
 .two-columns__paragraph:last-of-type {
   margin-bottom: 0;
 }
@@ -183,7 +178,7 @@ body {
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   background-image: url(/images/feynman.png);
   background-repeat: no-repeat;
@@ -226,11 +221,13 @@ body {
   background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
+  padding: 90px 0;
 }
 
 .section-title_theme_dark {
   color: white;
-  padding-top: 90px;
+  position: relative;
+  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
@@ -238,7 +235,6 @@ body {
 }
 
 .table_theme_dark {
-  padding-bottom: 90px;
   margin: 0 auto;
   justify-content: space-between;
 }
@@ -248,7 +244,7 @@ body {
   color: white;
   margin-right: 0;
   margin-top: 80px;
-  z-index: 5;
+  z-index: 2;
 }
 
 .kaufman__triangle {
@@ -260,12 +256,12 @@ body {
 }
 
 .footer {
- min-height: 350px;
- background-color: #1f1f1f;
- padding: 60px 0 40px;
+  background-color: #1f1f1f;
+  padding: 60px 0 40px;
 }
 
 .footer__columns {
+  min-height: 350px;
   display: flex;
   justify-content: space-between;
   width: 90%;
@@ -277,7 +273,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
 }
 
 .logo_place_footer {
@@ -304,10 +299,6 @@ body {
   list-style: none;
   margin: 0 0 16px;
   padding: 0;
-}
-
-.footer__column-link {
-
 }
 
 .footer__column-link_item {
