--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
   margin-bottom: 100px;
 }
 
-.logo__place_header {
+.logo_place_header {
   position: absolute;
   z-index: 5;
   top: 30px;
@@ -25,7 +25,7 @@
 
 .header__title {
   padding-left: 64px;
-  width: 730px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
@@ -34,7 +34,7 @@
 }
 
 .header__subtitle {
-  width: 388px;
+  max-width: 388px;
   position: absolute;
   left: 64px;
   bottom: 30px;
@@ -51,8 +51,8 @@
 }
 
 .header__main-illustration {
-  width: 765px;
-  height: 608px;
+  max-width: 765px;
+  max-height: 608px;
   position: absolute;
   right: 0;
   bottom: 0;
@@ -60,8 +60,8 @@
 }
 
 .header__square-pic {
-  height: 568px;
-  width: 568px;
+  min-height: 568px;
+  min-width: 568px;
   background-color: #2f80ed;
   position: absolute;
   top: 64px;
@@ -81,7 +81,7 @@
 }
 
 .two-columns__brief {
-  width: 175px;
+  min-width: 175px;
   color: #2f80ed;
   margin: 0;
   line-height: 1.2;
@@ -110,7 +110,7 @@
 }
 
 .digits {
-  width: 1100px;
+  max-width: 1100px;
   margin: 0 auto 100px;
 }
 
@@ -132,30 +132,19 @@
   text-align: center;
 }
 
-.section-subtitle_theme_light {
-  margin-bottom: 60px;
-}
-
 .table {
-  width: 1100px;
+  max-width: 1100px;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
-}
-
-.table_theme_light {
   justify-content: space-between;
 }
 
-.table__cell_theme_light {
-  width: 250px;
-  margin-bottom: 60px;
-}
-
-.table__cell_theme_light:nth-of-type(n+5) {
-  margin-bottom: 0;
+.table__cell {
+  max-width: 250px;
+  margin-top: 60px;
 }
 
 .table__heading {
@@ -173,7 +162,7 @@
   margin: 0;
 }
 
-.table__text_theme_light:first-of-type:not(:only-child) {
+.table__text:first-of-type:not(:only-of-type) {
   margin-bottom: 20px;
 }
 
@@ -187,7 +176,7 @@
 }
 
 .feynman__title {
-  width: 648px;
+  max-width: 648px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
@@ -240,19 +229,26 @@
 }
 
 .table__cell_theme_dark {
-  width: 200px;
+  max-width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
   z-index: 2;
 }
 
+.table__text_theme_dark {
+  margin-bottom: 0;
+}
+
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
   position: absolute;
   top: 0;
   right: -210px;
-  width: 877px;
-  height: 877px;
+  min-width: 877px;
+  min-height: 877px;
 }
 
 .footer {
@@ -276,7 +272,7 @@
 }
 
 .logo_place_footer {
-  width: 183px;
+  max-width: 183px;
 }
 
 .footer__author {
@@ -301,7 +297,7 @@
   padding: 0;
 }
 
-.footer__column-link_item {
+.footer__column-link {
   text-decoration: none;
   line-height: 30px;
   font-size: 18px;
