--- a/styles/style.css
+++ b/styles/style.css
@@ -51,8 +51,8 @@
 }
 
 .header__main-illustration {
-  max-width: 765px;
-  max-height: 608px;
+  width: 765px;
+  height: 608px;
   position: absolute;
   right: 0;
   bottom: 0;
@@ -81,7 +81,7 @@
 }
 
 .two-columns__brief {
-  min-width: 175px;
+  max-width: 175px;
   color: #2f80ed;
   margin: 0;
   line-height: 1.2;
@@ -143,7 +143,7 @@
 }
 
 .table__cell {
-  max-width: 250px;
+  width: 250px;
   margin-top: 60px;
 }
 
@@ -154,8 +154,7 @@
   margin: 0 0 20px;
 }
 
-.table__text,
-.table__text_source {
+.table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -189,9 +188,11 @@
 .feynman__subtitle {
   margin: 0 auto;
   text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
 }
 
-.feynman__subtitle,
 .feynman__link {
   line-height: 51px;
   font-size: 36px;
@@ -221,6 +222,7 @@
 
 .section-subtitle_theme_dark {
   color: white;
+  z-index: 2;
 }
 
 .table_theme_dark {
@@ -252,12 +254,14 @@
 }
 
 .footer {
+  min-height: 350px;
+  box-sizing: border-box;
+  display: flex;
   background-color: #1f1f1f;
   padding: 60px 0 40px;
 }
 
 .footer__columns {
-  min-height: 350px;
   display: flex;
   justify-content: space-between;
   width: 90%;
@@ -307,4 +311,6 @@
 
 .footer__social-icon {
   margin-right: 10px;
+  width: 16px;
+  height: 16px;
 }
