--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url(../bloks/header/__title/header__title.css);
 @import url(../bloks/kaufman/kaufman.css);
 @import url(../bloks/kaufman/__triangle/kaufman__triangle.css);
+@import url(../bloks/link/link.css);
 @import url(../bloks/logo/logo.css);
 @import url(../bloks/logo/_place/logo_place_footer.css);
 @import url(../bloks/logo/_place/logo_place_header.css);
