--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,7 @@
 @import url(../bloks/logo/_place/logo_place_footer.css);
 @import url(../bloks/logo/_place/logo_place_header.css);
 @import url(../bloks/page/page.css);
+@import url(../bloks/rotation/rotation.css);
 @import url(../bloks/section-subtitle/section-subtitle.css);
 @import url(../bloks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 @import url(../bloks/section-title/section-title.css);
