--- a/pages/index.css
+++ b/pages/index.css
@@ -26,10 +26,21 @@
 @import url(../bloks/header/__title/header__title.css);
 @import url(../bloks/kaufman/kaufman.css);
 @import url(../bloks/kaufman/__triangle/kaufman__triangle.css);
+@import url(../bloks/khan/khan.css);
+@import url(../bloks/khan/__author/khan__author.css);
+@import url(../bloks/khan/__book-container/khan__book-container.css);
+@import url(../bloks/khan/__book-pic/khan__book-pic.css);
+@import url(../bloks/khan/__buy-link/khan__buy-link.css);
+@import url(../bloks/khan/__container/khan__container.css);
+@import url(../bloks/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../bloks/khan/__quote-author/khan__quote-author.css);
+@import url(../bloks/khan/__quote/khan__quote.css);
+@import url(../bloks/khan/__title/khan__title.css);
 @import url(../bloks/link/link.css);
 @import url(../bloks/logo/logo.css);
 @import url(../bloks/logo/_place/logo_place_footer.css);
 @import url(../bloks/logo/_place/logo_place_header.css);
+@import url(../bloks/oakley/oakley.css);
 @import url(../bloks/page/page.css);
 @import url(../bloks/rotation/rotation.css);
 @import url(../bloks/section-subtitle/section-subtitle.css);
